[package]
name = "icons"
version = "0.1.0"
edition = "2021"

[lib]
path="icons.rs"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
serde={ version = "1.0.139", features = ["derive"] }
serde-xml-rs= "0.5.1"
