[package]
name = "icons"
version = "0.1.0"
edition = "2021"
build="build.rs"

[lib]
path="icons.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[build-dependencies]
serde={ version = "1.0.197", features = ["derive"] }
serde-xml-rs= "0.6.0"
zip = "0.6.6"
