[package]
name = "icons"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
path = "icons.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"

[build-dependencies]
serde = { version = "1.0.219" }
serde_derive = { version = "1.0.219" }
serde-xml-rs = "0.8.1"
zip = "5"
