[package]
name = "rogue-boi-core"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
build="build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cecs = { git = "https://github.com/caolo-game/cecs", default-features=false, features=["serde", "tracing"]}
rand = { version = "0.8.5", features = [] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde = { version = "1.0.171", features = ["derive"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing ={ version = "0.1.37", features = ["release_max_level_info"] }
tracing-wasm = "0.2.1"
smallvec = "1.11.0"
arrayvec = "0.7.4"
lazy_static = "1.4.0"
getrandom = { version = "0.2.10", features = ["js"] }
thiserror = "1.0.43"
serde_json = "1.0.102"
icons = { version = "0.1.0", path = "../icons" }
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "Path2d", "DomMatrix", "MouseEvent"] }
bincode = "1.3.3"
base64 = "0.21.2"
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[build-dependencies]
calamine = "0.21.2"
itertools = "0.11.0"
serde = { version = "1.0.171", features = ["derive"] }
