[package]
name = "rogue-boi-core"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cecs = { git = "https://github.com/caolo-game/cecs", default-features = false, features = [
    "serde",
] }
rand = { version = "0.8.5", features = [] }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0.197" }
serde_derive = { version = "1.0.197" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-wasm = "0.2.1"
smallvec = "1.13.1"
arrayvec = "0.7.4"
lazy_static = "1.4.0"
getrandom = { version = "0.2.12", features = ["js"] }
thiserror = "2.0.9"
serde_json = "1.0.114"
icons = { version = "0.1.0", path = "../icons" }
web-sys = { version = "0.3.69", features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "Path2d",
    "DomMatrix",
    "MouseEvent",
] }
base64 = "0.22.0"
serde-wasm-bindgen = "0.6.5"
ciborium = "0.2.2"
rustc-hash = "2.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[build-dependencies]
calamine = "0.26.1"
itertools = "0.13.0"
serde = { version = "1.0.197" }
serde_derive = { version = "1.0.197" }
