[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name="xtask"
path="xtask.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
icons = { version = "0.1.0", path = "../icons" }
zip = "0.6.3"
walkdir= "2.3.2"
