[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xtask"
path = "xtask.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.39", features = [] }
clap_derive = { version = "4.5.32" }
icons = { version = "0.1.0", path = "../icons" }
zip = "4"
walkdir = "2"
